--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -10,3 +10,11 @@ header {
 section {
   padding: 30px 0;
 }
+@media (min-width: 992px) {
+
+  #mainNav {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+}
