--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -18,3 +18,16 @@ section {
     flex-direction: row;
   }
 }
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
